<resources>
    <string name="app_name">Dictvocab</string>
    <string name="profile">Profile</string>
    <string name="quiz">Quiz</string>
    <string name="search">Search</string>
    <string name="vocabulary">Vocabulary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="key">Key</string>
    <string name="traits">Traits</string>
    <string name="look_up_for_new_words_here">Look up for new words here!</string>
    <string name="key_and_its_type">Key and its type</string>
    <string name="meaning">meaning</string>
    <string name="request_log_in">You are not logged in.\nPlease log in to use this feature!</string>
    <string name="log_in">LOG IN</string>
    <string name="dictionary">Dictionary</string>
    <string name="username">Username</string>
    <string name="logo">logo</string>
    <string name="create_an_account"><u>Create an account</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="create">Create</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="select_from_existed_tags">Select from existed tags</string>
    <string name="word">Word</string>
    <string name="hashtag">Hashtag</string>
    <string name="save">SAVE</string>
    <string name="ocr">OCR</string>
    <string name="camera">camera</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="result">Result</string>
    <string name="gallery">Gallery</string>
    <string name="text">Text</string>
</resources>
