<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightCyan"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="240dp"
        android:layout_marginBottom="6dp"
        android:autofillHints=""
        android:background="@drawable/circle_bordered_rectangle"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp" />

    <EditText
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_username"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="10dp"
        android:autofillHints=""
        android:background="@drawable/circle_bordered_rectangle"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/tv_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/circle_bordered_solid_rectangle"
        android:paddingHorizontal="60dp"
        android:text="@string/log_in"
        android:textColor="@color/LightSlateGray" />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:text="@string/create_an_account"
        android:textSize="16sp"

        />
</RelativeLayout>