<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightCyan"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo" />


    <EditText
        android:layout_below="@id/iv_logo"
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"

        android:layout_marginVertical="5dp"
        android:autofillHints=""
        android:background="@drawable/circle_bordered_rectangle"
        android:hint="@string/username"
        android:inputType="text"

        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:autofillHints=""
        android:background="@drawable/circle_bordered_rectangle"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:autofillHints=""
        android:background="@drawable/circle_bordered_rectangle"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp" />

    <EditText
        android:id="@+id/et_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:autofillHints=""
        android:background="@drawable/circle_bordered_rectangle"
        android:hint="@string/confirm_your_password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password_confirmation"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle_bordered_solid_rectangle"
        android:text="@string/create"
        android:textColor="@color/LightSlateGray" />
</RelativeLayout>